динамическая форма входа

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     // let password = prompt ('Введите пароль');//"123456"
     let token = "Bearer dgc0boasc8as6g5g5k5o5s5w606g39o3cc3e83ek3ck3b43k38o";
 
-   
+   token= null;
 
     const fetchTodosAndRender = () => {
       return fetch(host, {
@@ -36,12 +36,39 @@
         })
         .then((responseData) => {
           tasks = responseData.todos;
-          renderTasks();
+          renderApp();
         });
     };
 
-    const renderTasks = () => {
+    const renderApp = () => {
         const appEl = document.getElementById("app");
+        if (!token) {
+            const appHtml = `
+                <h1>Список задач</h1>
+            <div class="form">
+                <h3 class="form-title">Форма входа</h3>
+                <div class="form-row">
+                Логин:
+                <input type="text" id="login-input" class="input"/>
+                <br>
+                Пароль:
+                <input type="text" id="login-input" class="input"/>
+                </div>
+                <br>
+                <button class="button" id="login-button">Войти</button>
+            </div>`
+
+            
+            appEl.innerHTML = appHtml;
+
+            document.getElementById("login-button").addEventListener('click', () => {
+                token = "Bearer dgc0boasc8as6g5g5k5o5s5w606g39o3cc3e83ek3ck3b43k38o";
+                fetchTodosAndRender();
+            });
+
+            return;
+        }
+
         const tasksHtml = tasks
                 .map((task) => {
                 return `
@@ -56,18 +83,6 @@
 
         const appHtml = `
                 <h1>Список задач</h1>
-            <div class="form">
-                <h3 class="form-title">Форма входа</h3>
-                <div class="form-row">
-                Логин:
-                <input type="text" id="login-input" class="input"/>
-                <br>
-                Пароль:
-                <input type="text" id="login-input" class="input"/>
-                </div>
-                <br>
-                <button class="button" id="login-button">Войти</button>
-            </div>
 
             <ul class="tasks" id="list">
             <! --Список рендерится из JS —>
@@ -116,12 +131,13 @@
             .then((responseData) => {
               // Получили данные и рендерим их в приложении
               tasks = responseData.todos;
-              renderTasks();
+              renderApp();
             });
 
-          renderTasks();
+          renderApp();
         });
       }
+
 
         buttonElement.addEventListener("click", () => {
             if (textInputElement.value === "") {
@@ -162,14 +178,14 @@
                 buttonElement.textContent = "Добавить";
                 });
 
-            renderTasks();
+            renderApp();
         });  
 
       
     };
 
-    fetchTodosAndRender();
-
+    // fetchTodosAndRender();
+    renderApp();
    
   </script>
 </html>
