--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <div id="app"></div>
   </body>
-  <script type="module" src="./index.js"></script>
+    <!-- Старые script type=module удаляем: -->
+  	<!-- <script type="module" src="./index.js"></script> -->
+  	<!-- Вместо них подключаем main.js: -->
+    
+  <script src="./dist/main.js"></script>
 
-  
 </html>
